--- a/ShoppingAppAngular/shopp_app_angular/src/app/order-confirm/order-confirm.component.html
+++ b/ShoppingAppAngular/shopp_app_angular/src/app/order-confirm/order-confirm.component.html
@@ -1,1 +1,69 @@
-<p>order-confirm works!</p>
+<!-- Header-->
+<app-header></app-header>
+
+<div class="container px-4 px-lg-5 mt-5 main">
+    <div>
+        <h1>Order Confirmed!</h1>
+        <p>Thanks for your order! You should receive a shipping email within a few days. In the meantime, how did we do? Use this 5-second feedback form to tell us what you liked or what could be improved. We want you to love every second of shopping with us!</p>
+    </div>
+
+    <div>
+        <table class="table border">
+            <thead>
+              <tr>
+                <th scope="col" class="text-start">Product</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Sub Price</th>
+                <th scope="col">Sub Total</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td scope="row">
+                    <div class="product-info">
+                        <img src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=1260&dpr=2"
+                                    class="product-image" alt="Product Image">
+                        <span>Product name</span>
+                   </div>
+                    
+                </td>
+                <td>10</td>
+                <td>$100</td>
+                <td>$1000</td>
+              </tr>
+              <tr>
+                <td scope="row">
+                    <div class="product-info">
+                        <img src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=1260&dpr=2"
+                                    class="product-image" alt="Product Image">
+                        <span>Product name</span>
+                   </div>
+                    
+                </td>
+                <td>10</td>
+                <td>$100</td>
+                <td>$1000</td>
+              </tr>
+              <tr>
+                <td scope="row">
+                    <div class="product-info">
+                        <img src="https://images.pexels.com/photos/389819/pexels-photo-389819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=1260&dpr=2"
+                                    class="product-image" alt="Product Image">
+                        <span>Product name</span>
+                   </div>
+                    
+                </td>
+                <td>10</td>
+                <td>$100</td>
+                <td>$1000</td>
+              </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="text-center mt-3">
+        <button class="btn btn-outline-primary">Continue Shopping</button>
+    </div>
+</div>        
+
+<app-footer></app-footer>
